--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
   </head>
    <body>
-    <header class="text-center">
+    <header class="text-center mt-4 pb-4">
         <h1 class="text-3xl font-bold text-fuchsia-600">Money Master!</h1>
     </header>
 
